--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -61,7 +61,7 @@
       <li class="custom-nav-item dropdown" ng-if="ENV === 'EAO' && (authentication.user && authentication.user.roles.indexOf ('admin') !== -1)">
         <a class="dropdown-toggle" href ng-click="$event.preventDefault();" id="dropdownSystemMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" title="Administration">
           <span class="glyphicon glyphicon-cog"></span>
-          <span>ADMIN.</span>
+          <span>ADMIN</span>
           <span class="caret"></span>
         </a>
         <ul class="dropdown-menu pull-right" aria-labelledby="dropdownSystemMenu">
