--- a/modules/projects/client/views/projects.abstract.html
+++ b/modules/projects/client/views/projects.abstract.html
@@ -48,7 +48,7 @@
 
 	</div>
 
-	<div class="panel panel-default">
+	<div class="panel panel-default no-margin">
 		<div class="panel-heading"><h2>List of Environmental Assessments</h2></div>
 		<tmpl-projects-list2 id="anchor-list" x-projects="projects"></tmpl-projects-list2>
 	</div>
