--- a/modules/core/client/views/role-users-modal.html
+++ b/modules/core/client/views/role-users-modal.html
@@ -15,16 +15,16 @@
 	<!-- SET BY USERS -->
 	<div class="tab-pane" ng-show="s.userView">
 		<div class="form-group select-permission">
-			<label>Select User</label>
+			<label class="control-label">Select User</label>
 			<select class="form-control" id="user" ng-model="s.currentUser" ng-options="p as p for p in s.allUsers | orderBy"></select>
 			<tmpl-add-user-to-context context="s.context" role="s.defaultRole"></tmpl-add-user-to-context>
 		</div>
-		<div class="form-group manage-permission">
+		<div class="form-group manage-permission no-margin">
 			<label class="control-label">Manage Roles for Users</label>
 			<tmpl-role-new context="s.context" class="new-role-btn" ng-if="s.context.userCan.createRole"></tmpl-role-new>
 		</div>
 		<div class="panel panel-default">
-			<ul class="list-group no-border">
+			<ul class="list-group">
 				<li class="list-group-item" ng-repeat="role in s.allRoles">
 					<div class="checkbox">
 						<label>
@@ -42,16 +42,16 @@
 	<!-- SET BY ROLE -->
 	<div class="tab-pane" ng-show="!s.userView">
 		<div class="form-group select-permission">
-			<label for="role">Select Role</label>
+			<label class="control-label" for="role">Select Role</label>
 			<select class="form-control" id="role" ng-model="s.currentRole" ng-options="p as p for p in s.allRoles | orderBy"></select>
 			<tmpl-role-new context="s.context" ng-if="s.context.userCan.createRole"></tmpl-role-new>
 		</div>
-		<div class="form-group manage-permission">
+		<div class="form-group manage-permission no-margin">
 			<label class="control-label">Manage Users for Role</label>
 			<tmpl-add-user-to-context class="new-role-btn" context="s.context" role="s.defaultRole" ng-if="s.context._id !== 'application'"></tmpl-add-user-to-context>
 		</div>
 		<div class="panel panel-default">
-			<ul class="list-group no-border">
+			<ul class="list-group">
 				<li class="list-group-item" ng-repeat="u in s.allUsers">
 					<div class="checkbox">
 						<label>
