--- a/modules/recent-activity/client/views/recent-activity-list.html
+++ b/modules/recent-activity/client/views/recent-activity-list.html
@@ -36,7 +36,9 @@
 					<!-- <td data-title="'Priority'" class="text-center" sortable="'priority'" >{{o.priority}}</td> -->
 
 					<td class="actions-col action-x1" header-class="'actions-col action-x1'">
-						<a class="btn btn-link btn-sm" title="Edit News Item" ng-click="$event.stopPropagation()" ui-sref="admin.recentactivity.edit({recentActivityId:o._id})">
+						<a class="btn btn-sm btn-default" title="Edit News Item"
+							ng-click="$event.stopPropagation()" 
+							ui-sref="admin.recentactivity.edit({recentActivityId:o._id})">
 							<span class="glyphicon glyphicon-pencil"></span>
 						</a>
 					</td>
