Fixed a small issue with selectable table rows not rendering correctly

--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -3289,6 +3289,10 @@ section {
 					@extend .first-col;
 				}
 
+				&:first-child.select {
+					padding-left: 4rem;
+				}
+
 				&:last-child {
 					@extend .last-col;
 				}
