--- a/modules/users/client/views/user-search-chooser.html
+++ b/modules/users/client/views/user-search-chooser.html
@@ -10,15 +10,15 @@
 	<div class="inline-search-panel">
 		<div class="inline-search-fields">
 			<div class="form-group">
-				<label class="contro-label">Name</label>
+				<label class="control-label">Name</label>
 				<input class="form-control" type="text" ng-model="s.name"></input>
 			</div>
 			<div class="form-group">
-				<label class="contro-label">Email</label>
+				<label class="control-label">Email</label>
 				<input class="form-control" type="text" ng-model="s.email"></input>
 			</div>
 			<div class="form-group col-md-3">
-				<label class="contro-label">Organization</label>
+				<label class="control-label">Organization</label>
 				<input class="form-control" type="text" ng-model="s.org"></input>
 			</div>
 			<div class="form-group">
