ESM-569 - Artifacts - Show Current Stage Role name
- Updated the artifacts to show version
- Updated the artifacts list to include the stage-name
- Fixed an issue with the role-permissions-gear.html that launched views unexpectedly when included in a clickable row item.

--- a/modules/artifacts/client/views/artifact-publish.html
+++ b/modules/artifacts/client/views/artifact-publish.html
@@ -1,6 +1,6 @@
 
 <div class="view-title-container flex-row">
-	<h1>{{artifact.name}}</h1>
+	<h1>{{artifact.name}}&nbsp;<span class="placeholder-value">({{artifact.version}})</h1>
 	<div class="actions">
 		<a class="btn btn-default btn-sm" title="Cancel" ui-sref="p.artifact.view({artifactId:artifact._id})">Cancel</a>
         <a class="btn btn-default btn-sm" title="Reset" ng-click="reset()" ng-if="rolePermissions[artifact.stage]">Reset</a>
