--- a/modules/artifacts/client/views/artifact-list.html
+++ b/modules/artifacts/client/views/artifact-list.html
@@ -17,20 +17,23 @@
 				<td class="artifact-name-col" header-class="'artifact-name-col'" data-title="'Name'" filter="{'name':'text'}" sortable="'name'">
 					{{o.name}}
 				</td>
+				<td ng-if="!published" data-title="'Stage'" filter="{'stage':'select'}" filter-data="s.stageArray" sortable="'stage'">
+					{{o.stage}}<br/><span class="placeholder-value" ng-if="o.stageRole">({{o.stageRole}})</span>
+				</td>
 				<td data-title="'Version'" filter="{'version':'select'}" filter-data="s.versionArray" sortable="'version'">
 					{{o.version}}
 				</td>
-				<td ng-if="!published" data-title="'Stage'" filter="{'stage':'select'}" filter-data="s.stageArray" sortable="'stage'">
-					{{o.stage}}
-				</td>
-				<td data-title="'Last Update'" filter-data="'dateUpdated'" sortable="'dateUpdated'">
+				<td data-title="'Last Updated'" filter-data="'dateUpdated'" sortable="'dateUpdated'">
 					{{ o.dateUpdated | amDateFormat:'MMM DD, YYYY' }}
 				</td>
 				<td ng-if="!published" data-title="'Updated By'" filter="{'updatedBy.username':'text'}" sortable="'updatedBy.username'">
 					{{o.updatedBy.username}}
 				</td>
 				<td class="actions-col action-x2" header-class="'actions-col action-x2'">
-					<button class="btn btn-link btn-sm" ng-if="o.userPermissions.write" ng-click="$event.stopPropagation()" ui-sref="p.artifact.edit({artifactId:o._id})">
+					<button class="btn btn-default btn-sm" 
+						ng-if="o.userpermission.write" 
+						ng-click="$event.stopPropagation()" 
+						ui-sref="p.artifact.edit({artifactId:o._id})">
 						<span class="glyphicon glyphicon-pencil"></span>
 					</button>
 					<tmpl-permissions-gear class="permission-btn" x-context="s.project" x-object="o"></tmpl-permissions-gear>
